<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEB3B"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:text="@string/app_by_sharanya"
        android:textColor="#F44336"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="42dp"
        android:hint="@string/this_is_edittext_enter_anything"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@android:color/holo_red_dark"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <android.widget.Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radiobutton1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:backgroundTint="#F44336"
        android:text="@string/this_is_button"
        android:textColor="#CDDC39"
        tools:ignore="TextContrastCheck" />

    <RadioButton
        android:id="@+id/radiobutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="58dp"
        android:layout_marginBottom="171dp"
        android:text="@string/radio_button"
        android:textColor="#F44336"
        tools:ignore="TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="171dp"
        android:text="@string/checkbox"
        android:textColor="#F44336"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>